# pytermgame

./: .gitignore  MANUAL.md  README.md  TODO.md  breakout.py  cookie_clicker.py  ex1_jet_and_ball.py  ex2_cookie_clicker.py  ex3_pong.py  ex4_breakout.py  ex5_space_shooter.py  ex6_wordle.py  ex7_speedtyping.py  ex8_menus.py  jet_and_ball.py  keytest.py  pong.py  pyproject.toml  stress_test.py  test.py  testt.py  transitiontest.py
examples/: ex1_jet_and_ball.py  ex2_cookie_clicker.py  ex3_pong.py  ex4_breakout.py  ex5_space_shooter.py  ex6_wordle.py  ex6_wordle_ui.py  ex7_minesweeper.py
pytermgame/: __init__.py  _active.py  _dev.py  _get_key.py  _key_posix.py  _key_win.py  _transition.py  additional.py  clock.py  collidable.py  coords.py  cursor.py  debugger.py  event.py  game.py  group.py  key.py  layout.py  matrixstring.py  modifier.py  profiler.py  scene.py  sprite.py  sprites.py  style.py  surface.py  terminal.py  transition.py  ui.py
