[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytermgame"
version = "1.1.2"
description = "Like pygame, but in the terminal"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/tovicheung/pytermgame"

[tool.setuptools]
packages = ["pytermgame"]
